Fix add title for non-chrome

--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -721,7 +721,7 @@
               this._saveTitle(e.currentTarget.value);
               e.currentTarget.value = '';
             }
-          });
+          }, 10); // this number is needed for non-chrome browsers
         } else {
           this._titleInputActive = false;
         }
