--- a/audio-artifact/audio-artifact.html
+++ b/audio-artifact/audio-artifact.html
@@ -240,6 +240,7 @@
     },
     _audioReset: function() {
       this.set('_audioObj.playing', false);
+      playingAudioNode = null;
     },
     _audioReady: function() {
       this.set('_audioObj.ready', true);
