Fix has attached audio check

--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -911,6 +911,9 @@
             hasAttachedAudio = true;
             // end the looping
             return false;
+          } else {
+            // keep looping
+            return true;
           }
         });
       }
