Add title and translations

--- a/audio-artifact/audio-artifact.html
+++ b/audio-artifact/audio-artifact.html
@@ -133,6 +133,7 @@
       .headphones {
         margin-right: 5px;
         transform: scale(.8);
+        pointer-events: none;
       }
 
       .story-content-title {
