--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -422,7 +422,7 @@
             <template is="dom-if" if="[[!data.tombstoned]]">
               <div class="attached-audio-background" hidden="[[!_hasAttachedAudio(data.associatedArtifacts)]]">
               </div>
-              <fs-icon class="attached-audio" icon="audio-recording-green-medium" hidden="[[!_hasAttachedAudio(data.associatedArtifacts)]]"></fs-icon>
+              <fs-icon class="attached-audio" title="[[i18n('associated_audio')]]" alt="[[i18n('associated_audio')]]" icon="audio-recording-green-medium" hidden="[[!_hasAttachedAudio(data.associatedArtifacts)]]"></fs-icon>
               <i class$='not-tagged-icon [[_getNotTaggedIconClass()]]' hidden$='[[_hideTagIcon(data, selectMode)]]' title='[[i18n("not_tagged")]]' data-test="NotTaggedIcon"></i>
               <i class='comment-icon' hidden$='[[!data.commentCount]]'>[[data.commentCount]]</i>
             </template>
