--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -431,7 +431,7 @@
           <template is='dom-if' if='[[_hideContributorName(view, showContributed, _titleInputActive)]]'>
             <div class="title" title='[[data.title]]' on-tap="_stopProp">
               <i class="exclamation-icon" hidden$="[[!_titleError]]"></i>
-              <a class$="[[_calculateTitleClass(_titleError)]]" href$='[[_href]]' on-tap="_titleLinkOverride" hidden$='[[_hideTitle(data.title, _titleInputActive)]]' data-test="GalleryTitleLink">[[data.title]]</a>
+              <span class$="[[_calculateTitleClass(_titleError)]]" on-tap="_titleLinkOverride" hidden$='[[_hideTitle(data.title, _titleInputActive)]]' data-test="GalleryTitleLink">[[data.title]]</span>
               <a href$='[[_href]]?focus=title' class="add-title-link" on-tap="_toggleAddTitleInput" hidden$='[[_hideAddTitle(readOnly, data.title, data.contributorCisUserId, owner, _titleInputActive)]]' data-test="GalleryAddTitleBtn">
                 <i class='add-icon'></i>[[i18n('add_title')]]
               </a>
@@ -659,13 +659,13 @@
     ],
     _titleLinkOverride: function(e) {
       if (this.selectMode || this.data.tombstoned) {
-        e.preventDefault();
         return;
       }
       if (this._titleError) {
-        e.preventDefault();
         this._titleError = false;
         this._toggleAddTitleInput();
+      } else {
+        this._goToItem(e);
       }
     },
     _getRemainingDaysCount: function(i18n, data) {
