Replaced museo with the heading variable

--- a/story-artifact/story-artifact.html
+++ b/story-artifact/story-artifact.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../fs-styles/fs-styles.html">
 
 <dom-module id='story-artifact'>
   <template>
@@ -28,7 +29,7 @@
         display: block;
         overflow: hidden;
         text-overflow: ellipsis;
-        font-family: museo;
+        font-family: var(--fs-font-face-heading);
       }
       .story-content-body {
         position: relative;
