check for experiment

--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -813,10 +813,10 @@
       e.preventDefault();
       e.stopPropagation();
 
-      /* Modal viewer */
-      this.fire('view-artifact', {"artifact": this.data})
-      return;
-      /* end modal viewer */
+      if (FS.showEx('artifactViewerModalEx')) {
+        this.fire('view-artifact', {"artifact": this.data})
+        return;
+      }
 
       var url = this._href;
 
