hide when screening

--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -423,8 +423,10 @@
               <div class="attached-audio-background" hidden="[[!_hasAttachedAudio(data.associatedArtifacts)]]">
               </div>
               <fs-icon class="attached-audio" title="[[i18n('associated_audio')]]" alt="[[i18n('associated_audio')]]" icon="audio-recording-green-medium" hidden="[[!_hasAttachedAudio(data.associatedArtifacts)]]"></fs-icon>
-              <i class$='not-tagged-icon [[_getNotTaggedIconClass()]]' hidden$='[[_hideTagIcon(data, selectMode)]]' title='[[i18n("not_tagged")]]' data-test="NotTaggedIcon"></i>
-              <i class='comment-icon' hidden$='[[!data.commentCount]]'>[[data.commentCount]]</i>
+              <div hidden="[[screening]]">
+                <i class$='not-tagged-icon [[_getNotTaggedIconClass()]]' hidden$='[[_hideTagIcon(data, selectMode)]]' title='[[i18n("not_tagged")]]' data-test="NotTaggedIcon"></i>
+                <i class='comment-icon' hidden$='[[!data.commentCount]]'>[[data.commentCount]]</i>
+              </div>
             </template>
           </div>
 
