--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -47,11 +47,22 @@
         color: #0060d7;
       }
 
-      .title {
+      .action-section {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
         border-top: 1px solid #CFD6D7;
+        height: 28px;
+      }
+
+      .private-memory-icon {
+        padding: 2px 3px 0 0;
+      }
+
+      .title {
+        flex: 1;
         display:block;
         font-size:0.875rem;
-        height: 28px;
         line-height: 1.3;
         overflow:hidden;
         padding: 2px 3px 4px;
@@ -431,26 +442,40 @@
           </div>
 
           <template is='dom-if' if='[[_hideContributorName(view, showContributed, _titleInputActive)]]'>
-            <div class="title" title='[[data.title]]' on-tap="_stopProp">
-              <i class="exclamation-icon" hidden$="[[!_titleError]]"></i>
-              <a class$="[[_calculateTitleClass(_titleError)]]" href$='[[_href]]' on-tap="_titleLinkOverride" hidden$='[[_hideTitle(data.title, _titleInputActive)]]' data-test="GalleryTitleLink">[[data.title]]</a>
-              <a href$='[[_href]]?focus=title' class="add-title-link" on-tap="_toggleAddTitleInput" hidden$='[[_hideAddTitle(readOnly, data.title, data.contributorCisUserId, owner, _titleInputActive)]]' data-test="GalleryAddTitleBtn">
-                <i class='add-icon'></i>[[i18n('add_title')]]
-              </a>
-              <input class="title-input" type="text" maxlength='140' hidden$="[[!_titleInputActive]]" on-keydown="_handleEnterExitBlur" on-blur="_handleEnterExitBlur" placeholder$="[[_addTitle]]" data-test="GalleryTitleInput"/>
+            <div class="action-section">
+              <div class="title" title='[[data.title]]' on-tap="_stopProp">
+                <i class="exclamation-icon" hidden$="[[!_titleError]]"></i>
+                <a class$="[[_calculateTitleClass(_titleError)]]" href$='[[_href]]' on-tap="_titleLinkOverride" hidden$='[[_hideTitle(data.title, _titleInputActive)]]' data-test="GalleryTitleLink">[[data.title]]</a>
+                <a href$='[[_href]]?focus=title' class="add-title-link" on-tap="_toggleAddTitleInput" hidden$='[[_hideAddTitle(readOnly, data.title, data.contributorCisUserId, owner, _titleInputActive)]]' data-test="GalleryAddTitleBtn">
+                  <i class='add-icon'></i>[[i18n('add_title')]]
+                </a>
+                <input class="title-input" type="text" maxlength='140' hidden$="[[!_titleInputActive]]" on-keydown="_handleEnterExitBlur" on-blur="_handleEnterExitBlur" placeholder$="[[_addTitle]]" data-test="GalleryTitleInput"/>
+              </div>
+              <span 
+                hidden=[[isPublic(data.visibility, privateMemoriesEx)]] 
+                title="[[i18n(private_memory_tooltip)]]">
+                <fs-icon class="private-memory-icon" icon="sign-in-small"></fs-icon>
+              </span>
             </div>
           </template>
           <!-- Contributor Name -->
             <div class="artifact-meta" hidden$="[[_hideContributorName(view, showContributed, _titleInputActive)]]">
-              <div class="title-2" title='[[data.title]]' on-tap="_stopProp">
-                <i class="exclamation-icon" hidden$="[[!_titleError]]"></i>
-                <a class$="[[_calculateTitleClass(_titleError)]]" href$='[[_href]]' on-tap="_titleLinkOverride" hidden$='[[_hideTitle(data.title, _titleInputActive)]]' data-test="GalleryTitleLink2">[[data.title]]</a>
-                <a href$='[[_href]]?focus=title' class="add-title-link" on-tap="_toggleAddTitleInput" hidden$='[[_hideAddTitle(readOnly, data.title, data.contributorCisUserId, owner, _titleInputActive)]]' data-test="GalleryAddTitleBtn2">
-                  <i class='add-icon'></i>[[i18n('add_title')]]
-                </a>
-              </div>
-              <div class="contributor" title='[[_getContributorName(data.*)]]' hidden$='[[!_getContributorName(data.*)]]'>
-                <span id='contributor-link' on-click='_openContactCard'></span>
+              <div class="action-section">
+                <div class="title-2" title='[[data.title]]' on-tap="_stopProp">
+                  <i class="exclamation-icon" hidden$="[[!_titleError]]"></i>
+                  <a class$="[[_calculateTitleClass(_titleError)]]" href$='[[_href]]' on-tap="_titleLinkOverride" hidden$='[[_hideTitle(data.title, _titleInputActive)]]' data-test="GalleryTitleLink2">[[data.title]]</a>
+                  <a href$='[[_href]]?focus=title' class="add-title-link" on-tap="_toggleAddTitleInput" hidden$='[[_hideAddTitle(readOnly, data.title, data.contributorCisUserId, owner, _titleInputActive)]]' data-test="GalleryAddTitleBtn2">
+                    <i class='add-icon'></i>[[i18n('add_title')]]
+                  </a>
+                </div>
+                <div class="contributor" title='[[_getContributorName(data.*)]]' hidden$='[[!_getContributorName(data.*)]]'>
+                  <span id='contributor-link' on-click='_openContactCard'></span>
+                </div>
+                <span 
+                  hidden=[[isPublic(data.visibility, privateMemoriesEx)]] 
+                  title="[[i18n(private_memory_tooltip)]]">
+                  <fs-icon class="private-memory-icon" icon="sign-in-small"></fs-icon>
+                </span>
               </div>
             </div>
 
@@ -938,7 +963,10 @@
         });
       }
       return hasAttachedAudio;
-    }
+    },
+    isPublic: function (visibility, privateMemoriesEx) {
+        return privateMemoriesEx ? visibility === "PUBLIC" : true;
+      }
   });
 })();
 </script>
