updating syntax of i18n string

--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -453,7 +453,7 @@
               </div>
               <span 
                 hidden="[[isPublic(data.visibility, privateMemoriesEx)]]" 
-                title="[[i18n(private_memory_tooltip)]]">
+                title="[[i18n('private_memory_tooltip')]]">
                 <fs-icon class="private-memory-icon" icon="sign-in-small"></fs-icon>
               </span>
             </div>
@@ -473,7 +473,7 @@
                 </div>
                 <span 
                   hidden="[[isPublic(data.visibility, privateMemoriesEx)]]"
-                  title="[[i18n(private_memory_tooltip)]]">
+                  title="[[i18n('private_memory_tooltip')]]">
                   <fs-icon class="private-memory-icon" icon="sign-in-small"></fs-icon>
                 </span>
               </div>
