--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -457,7 +457,8 @@
               <span 
                 class="private-memory-container"
                 hidden="[[isPublic(data.visibility, privateMemoriesEx)]]" 
-                title="[[i18n('private_memory_tooltip')]]">
+                title="[[i18n('private_memory_tooltip')]]"
+                data-test="gridPrivateMemory">
                 <fs-icon class="private-memory-icon" icon="sign-in-small"></fs-icon>
               </span>
             </div>
