--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -454,9 +454,9 @@
                 </a>
                 <input class="title-input" type="text" maxlength='140' hidden$="[[!_titleInputActive]]" on-keydown="_handleEnterExitBlur" on-blur="_handleEnterExitBlur" placeholder$="[[_addTitle]]" data-test="GalleryTitleInput"/>
               </div>
-              <span 
+              <span
                 class="private-memory-container"
-                hidden="[[isPublic(data.visibility, privateMemoriesEx)]]" 
+                hidden="[[isPublic(data.visibility, privateMemoriesEx)]]"
                 title="[[i18n('private_memory_tooltip')]]">
                 <fs-icon class="private-memory-icon" icon="sign-in-small" data-test="gridPrivateMemory"></fs-icon>
               </span>
@@ -475,7 +475,7 @@
                 <div class="contributor" title='[[_getContributorName(data.*)]]' hidden$='[[!_getContributorName(data.*)]]'>
                   <span id='contributor-link' on-click='_openContactCard'></span>
                 </div>
-                <span 
+                <span
                   class="private-memory-container"
                   hidden="[[isPublic(data.visibility, privateMemoriesEx)]]"
                   title="[[i18n('private_memory_tooltip')]]">
@@ -974,8 +974,8 @@
       return hasAttachedAudio;
     },
     isPublic: function (visibility, privateMemoriesEx) {
-        return privateMemoriesEx ? visibility === "PUBLIC" : true;
-      }
+      return privateMemoriesEx ? visibility !== "PRIVATE" : true;
+    }
   });
 })();
 </script>
