Move data-test up one level
Moved data-test up from fs-icon to span tag so it is at the same level as the hidden attribute.

--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -457,8 +457,9 @@
               <span 
                 class="private-memory-container"
                 hidden="[[isPublic(data.visibility, privateMemoriesEx)]]" 
-                title="[[i18n('private_memory_tooltip')]]">
-                <fs-icon class="private-memory-icon" icon="sign-in-small" data-test="gridPrivateMemory"></fs-icon>
+                title="[[i18n('private_memory_tooltip')]]"
+                data-test="gridPrivateMemory">
+                <fs-icon class="private-memory-icon" icon="sign-in-small"></fs-icon>
               </span>
             </div>
           </template>
