move data-test under class
Trying to resolve conflict with master by moving data-test attribute directly under class.

--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -456,9 +456,9 @@
               </div>
               <span 
                 class="private-memory-container"
+                data-test="gridPrivateMemory"
                 hidden="[[isPublic(data.visibility, privateMemoriesEx)]]" 
-                title="[[i18n('private_memory_tooltip')]]"
-                data-test="gridPrivateMemory">
+                title="[[i18n('private_memory_tooltip')]]">
                 <fs-icon class="private-memory-icon" icon="sign-in-small"></fs-icon>
               </span>
             </div>
