--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -106,6 +106,7 @@
         text-overflow: ellipsis;
         white-space: nowrap;
         font-size: .88rem;
+        max-width: 145px;
       }
 
       .contributor .contributor-name {
