PS-4106: Hide add tag icon if any tags exist
Previously, we were not including soft tags to determine hiding or
showing the add tag icon.

--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -912,13 +912,7 @@
       }
     },
     _hideTagIcon: function(data, selectMode){
-      if (selectMode) {
-        return true;
-      } else {
-        // Soft tag count only matters if it's an IMAGE
-        const tagCount = data.category === 'IMAGE' ? data.photoTagCount - data.softTagCount || 0 : data.photoTagCount;
-        return this._is(tagCount, 0) ? false : true;
-      }
+      return selectMode || data.photoTagCount > 0
     },
 
     /**
