Add update failed error message (#55)
* Add update failed error message

* Bump version

* Check editableByCaller

--- a/fs-artifact-grid-item.html
+++ b/fs-artifact-grid-item.html
@@ -450,7 +450,7 @@
               </div>
               <fs-icon class="attached-audio" title="[[i18n('associated_audio')]]" alt="[[i18n('associated_audio')]]" icon="audio-recording-green-medium" hidden="[[!_hasAttachedAudio(data.associatedArtifacts)]]"></fs-icon>
               <div>
-                <i class$='not-tagged-icon [[_getNotTaggedIconClass()]]' hidden$='[[_hideTagIcon(data.photoTagCount, selectMode, data.uploadError)]]' title='[[i18n("not_tagged")]]' data-test="NotTaggedIcon"></i>
+                <i class$='not-tagged-icon [[_getNotTaggedIconClass()]]' hidden$='[[_hideTagIcon(data.photoTagCount, selectMode, data.uploadError, updateFailed, data.editableByCaller)]]' title='[[i18n("not_tagged")]]' data-test="NotTaggedIcon"></i>
                 <i class='comment-icon' hidden$='[[!data.commentCount]]'>[[data.commentCount]]</i>
               </div>
             </template>
@@ -530,6 +530,13 @@
               <div class="error-processing overlay overlay-message" hidden$="[[!processingFailed]]" on-tap='_goToItem'>
                 <div class="error-text" data-test="ProcessingFailed">
                   [[i18n('processing_fail')]]
+                </div>
+              </div>
+
+              <!--Error Editing Story-->
+              <div class="error-processing overlay overlay-message" hidden$="[[_hideUpdateFailError(updateFailed, data.editableByCaller)]]" on-tap='_goToItem'>
+                <div class="error-text">
+                  [[i18n('update_fail')]]
                 </div>
               </div>
             </template>
@@ -726,8 +733,9 @@
       this.uploadFailed = displayState === 'UPLOAD_FAILED';
       this.processing = displayState === 'PROCESSING';
       this.processingFailed = displayState === 'PROCESSING_FAILED';
+      this.updateFailed = displayState === 'UPDATE_FAILED';
       this.restricted = displayState === 'RESTRICTED';
-      this._displayMessage = displayState !== 'APPROVED';
+      this._displayMessage = displayState !== 'APPROVED' && (!displayState === 'UPDATE_FAILED' || this.data.editableByCaller);
     },
     _computeIsActive: function(titleInputActive) {
       if (titleInputActive) return true;
@@ -907,8 +915,8 @@
         this.fireMetrics({link_name: 'Artifact: Click to View'});
       }
     },
-    _hideTagIcon: function(photoTagCount, selectMode, uploadError){
-      return selectMode || photoTagCount > 0 || uploadError;
+    _hideTagIcon: function(photoTagCount, selectMode, uploadError, updateFailed, editableByCaller){
+      return selectMode || photoTagCount > 0 || uploadError || (updateFailed && editableByCaller);
     },
 
     /**
@@ -941,6 +949,9 @@
     },
     isPublic: function (visibility) {
       return visibility !== "PRIVATE";
+    },
+    _hideUpdateFailError: function(updateFailed, editableByCaller) {
+      return !updateFailed || !editableByCaller;
     }
   });
 })();
